--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, sans-serif;
+html, body {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  width: 100%;
+  height: 100%;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
